Money Manager 25.6.1
* Удаление ненужной функциональности: периодические платежи, документы